.metadata/.plugins/org.eclipse.cdt.ui/CalculatorDisplayLib.build.log
16:39:51 **** Incremental Build of configuration Debug for project CalculatorDisplayLib ****
make all 
Building file: ../sevensegment.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1z -O0 -g3 -Wall -c -fmessage-length=0 -Wno-attributes -MMD -MP -MF"sevensegment.d" -MT"sevensegment.o" -o "sevensegment.o" "../sevensegment.cpp"
../sevensegment.cpp:51:8: error: no member named 'cout' in namespace 'std'
                std::cout << "\n";
                ~~~~~^
In file included from ../sevensegment.cpp:2:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:266:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__bit_reference:15:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:643:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:659:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iterator:958:32: error: invalid operands to binary expression ('std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >::ostream_type' (aka 'basic_ostream<char, std::__1::char_traits<char> >') and 'const std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >::char_type *' (aka 'const char *'))
                *__out_stream_ << __delim_;
                ~~~~~~~~~~~~~~ ^  ~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:2031:19: note: in instantiation of member function 'std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >::operator=' requested here
        *__result = __op(*__first);
                  ^
../sevensegment.cpp:46:8: note: in instantiation of function template specialization 'std::__1::transform<std::__1::__wrap_iter<const char *>, std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >, (lambda at ../sevensegment.cpp:48:5)>' requested here
                std::transform(begin(digits),end(digits),
                     ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/type_traits:4903:3: note: candidate function not viable: cannot convert argument of incomplete type 'std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >::ostream_type' (aka 'basic_ostream<char, std::__1::char_traits<char> >') to 'std::byte' for 1st argument
  operator<< (byte  __lhs, _Integer __shift) noexcept
  ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/memory:5334:1: note: candidate template ignored: could not match 'shared_ptr<type-parameter-0-2>' against 'const char *'
operator<<(basic_ostream<_CharT, _Traits>& __os, shared_ptr<_Yp> const& __p);
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/string:3965:1: note: candidate template ignored: could not match 'basic_string<type-parameter-0-0, type-parameter-0-1, type-parameter-0-2>' against 'const char *'
operator<<(basic_ostream<_CharT, _Traits>& __os,
^
In file included from ../sevensegment.cpp:2:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/vector:266:
In file included from /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/__bit_reference:15:
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1812:19: error: no viable overloaded '='
        *__result = *__first;
        ~~~~~~~~~ ^ ~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/algorithm:1837:19: note: in instantiation of function template specialization 'std::__1::__copy<std::__1::__wrap_iter<const std::__1::basic_string<char> *>, std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> > >' requested here
    return _VSTD::__copy(__unwrap_iter(__first), __unwrap_iter(__last), __unwrap_iter(__result));
                  ^
../sevensegment.cpp:56:7: note: in instantiation of function template specialization 'std::__1::copy<std::__1::__wrap_iter<const std::__1::basic_string<char> *>, std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> > >' requested here
        std::copy(std::begin(numbers.at(digit)),
             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iterator:939:28: note: candidate function (the implicit move assignment operator) not viable: no known conversion from 'const std::__1::basic_string<char>' to 'std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >' for 1st argument
class _LIBCPP_TEMPLATE_VIS ostream_iterator
                           ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/iterator:939:28: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'const std::__1::basic_string<char>' to 'const std::__1::ostream_iterator<std::__1::basic_string<char>, char, std::__1::char_traits<char> >' for 1st argument
3 errors generated.
make: *** [sevensegment.o] Error 1

16:39:51 Build Failed. 4 errors, 0 warnings. (took 538ms)

